testsuite/tests/grammar/invalid_transform/abstract_node.lkt
from lexer_example import foo_lexer

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule stmt_rule <- list*(DerivedNode("def" name))
    name <- Name(@Identifier)
}

class FooNode implements Node[FooNode] {
}

@abstract
class DerivedNode : FooNode {
}

class Def : DerivedNode {
    @parse_field name: Name
}

class Name : FooNode implements TokenNode {
}
